# passmng

./: Cargo.toml  LICENCE  README.md  build.rs
src/: db.rs  main.rs
